--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "express": "^4.12.3",
     "handlebars": "^3.0.0",
-    "jugo": "0.0.4",
+    "jugo": "latest",
     "lodash": "^3.5.0"
   }
 }
