--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "handlebars": "^3.0.0",
     "jugo": "latest",
     "lodash": "^3.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.3.7"
   }
 }
